# ml-PredictingJusticeVotesFromLanguage

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
justice_vote_alignment/: __init__.py  dataset.py  features.py  plots.py
justice_vote_alignment/modeling/: predict.py  train.py
notebooks/:   04_model_training.ipynb    05_model_evaluation.ipynb  00_data_audit.ipynb  01_data_preprocessing.ipynb  02_exploratory_data_analysis.ipynb  03_feature_engineering.ipynb
