[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "justice_vote_alignment"
version = "0.0.1"
description = "Predicting Supreme Court justice vote alignment from conversational and linguistic signals in oral argument transcripts."
authors = [
  { name = "Sumaitat Ebshar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["justice_vote_alignment"]
include = ["pyproject.toml", "justice_vote_alignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["justice_vote_alignment"]
force-sort-within-sections = true

